@@ -1784,3 +1784,4 @@ INSERT INTO `messages` (`id_mes`, `module_mes`, `language_mes`, `message_mes`) V
 INSERT INTO `messages` (`id_mes`, `module_mes`, `language_mes`, `message_mes`) VALUES(1708, 'standard', 'en', 'Datas block');
 INSERT INTO `messages` (`id_mes`, `module_mes`, `language_mes`, `message_mes`) VALUES(1709, 'standard', 'en', '<div class="rowComment"><h1>Pages specific working tags:</h1><p>These tags can only be used outside a block tag of a Polymod module.</p><div class="retrait"><h3>Link(s) to one or several pages:</h3> <div class="retrait"><span class="code">&lt;atm-linx type="<span class="keyword">linxType</span>"&gt;<span class="vertclair">linxDefinition</span>&lt;/atm-linx&gt;</span> <ul>     <li><span class="keyword"> linxType : </span> &#160;Type of link among:     <ul>         <li><span class="keyword"> direct :&#160; </span>Direct link to a  specific page.</li>         <li><span class="keyword"> sublinks : </span> &#160;Link to the sub  pages of the current page.</li>         <li><span class="keyword"> desclinks :&#160; </span> Navation history  from one page to another.</li>         <li><span class="keyword"> recursivelinks :&#160; </span> Structure  of the sub links from a given page.</li>     </ul></li>     <li><span class="vertclair"> linxDefinition :&#160; </span> <a target="_blank" href="http://man.automne-cms.org/">See Automne manual for details</a>.</li> </ul></div> <h3>Link to a printable page:</h3> <div class="retrait"><span class="code">&lt;atm-print-link keeprequest="<span class="keyword">true</span>"&gt;<span class="vertclair">{{href}}</span>&lt;/atm-print-link&gt;</span> <ul>     <li><span class="vertclair"> {{href}} :&#160; </span> Replaced by the  link to the printable page.</li>     <li>Attribute <span class="keyword">keeprequest : </span> &#160;Optional,  allows to conserve the attributes GET from which the printed page is  called (defaut : false)</li> </ul></div> <h3>Value of a constant (see the constant files of Automne) :</h3> <div class="retrait"><span class="code">&lt;atm-constant name="<span class="keyword">constantName</span>" /&gt;</span> <ul>     <li><span class="keyword">constantName :</span>&#160;Name of the constant  declared. All constants and especially those of files /cms_rc.php and  /config.php are concerned</li> </ul></div> <h3>Date of last update:</h3> <div class="retrait"><span class="code">&lt;atm-last-update format="<span class="keyword">d-m-Y</span>"&gt;<span class="vertclair">{{date}}  {{firstname}} {{lastname}}</span>&lt;/atm-last-update&gt;</span> <ul>     <li><span class="vertclair"> {{date}} : </span> &#160;Date of the last  update of the content of the page. the format of the date shown is given  by the attribute <span class="keyword">format</span> of the tag.</li>     <li><span class="vertclair"> {{firstname}} :&#160; </span>First name of  the person responsible for the last update.</li>     <li><span class="vertclair"> {{lastname}} :&#160; </span> Last name of  the person responsible for the last update.</li> </ul></div> <h3>Javascript files of the page:</h3> <div class="retrait"><span class="code">&lt;atm-js-tags files="<span class="keyword">/js/js1.js,/js/js2.js</span>" /&gt;</span> <p>This tag allows you to concatenate several javascript files into  one.&#160;This accelerates therefore the loading of the web page. The files  listed are concatenated and compressed before being served to the user.  An advanced management of the navigator cache is employed.</p> <ul>     <li>Attribute <span class="keyword">files</span> : Javascript files  to include in the page (separated by commas). These files should  imperatively be found in the directory /js/ or in a sub directory.</li> </ul></div> <h3>CSS style sheets of the page:</h3> <div class="retrait"><span class="code">&lt;atm-css-tags files="<span class="keyword">/css/css1.css,/css/css2.css</span>" /&gt;</span> <p>This tag allows you to concatenate several CSS files into one.&#160;This  accelerates therefore the loading of the web page. The files listed are  concatenated and compressed before being served to the user. An advanced  management of the navigator cache is employed.</p> <ul>     <li>Attribute <span class="keyword">files</span> : CSS files to  include in the page (separated by commas). These files should  imperatively be found in the directory /css/ or in a sub directory.</li>     <li>Attribute <span class="keyword">media </span>(optional) : allows  to specify the exit media employed among: <span class="vertclair">all</span>,  <span class="vertclair">aural</span>, <span class="vertclair">braille</span>,  <span class="vertclair">embossed</span>, <span class="vertclair">handheld</span>,  <span class="vertclair">print</span>, <span class="vertclair">projection</span>,  <span class="vertclair">screen</span>, <span class="vertclair">tty</span>,  <span class="vertclair">tv</span>. By default, if this attribute is  absent, the media <span class="vertclair">all </span>will be employed.</li> </ul></div> <h3>Identifier of the page:</h3> <div class="retrait"><span class="code"><span class="keyword">{{pageID}}</span></span> <ul>     <li><span class="keyword"> {{pageID}} :&#160; </span> Replaced by the  identifier of the current page.</li> </ul></div></div></div>');
 INSERT INTO `messages` (`id_mes`, `module_mes`, `language_mes`, `message_mes`) VALUES(1710, 'standard', 'en', 'Pages specific working tags');
+INSERT INTO `messages` (`id_mes`, `module_mes`, `language_mes`, `message_mes`) VALUES(1711, 'standard', 'en', 'Do you confirm deletion of module \'%s\'? Please note, this deletion is irreversible. This will remove the module as well as categories, rows and all attached files.');
