@@ -1667,3 +1667,4 @@ INSERT INTO `messages` (`id_mes`, `module_mes`, `language_mes`, `message_mes`) V
 INSERT INTO `messages` (`id_mes`, `module_mes`, `language_mes`, `message_mes`) VALUES(1708, 'standard', 'fr', 'Bloc de données');
 INSERT INTO `messages` (`id_mes`, `module_mes`, `language_mes`, `message_mes`) VALUES(1709, 'standard', 'fr', '<div class="rowComment"><h1>Tags de travail spécifiques à la gestion de pages :</h1><p>Ces tags ne fonctionnent pas à l''intérieur d''un tag block de module polymod.</p><div class="retrait"><h3>Lien(s) vers une ou plusieurs pages :</h3> <div class="retrait"><span class="code">&lt;atm-linx type="<span class="keyword">linxType</span>"&gt;<span class="vertclair">linxDefinition</span>&lt;/atm-linx&gt;</span> <ul>     <li><span class="keyword"> linxType : </span> &#160;Type de lien parmi :     <ul>         <li><span class="keyword"> direct : </span> &#160;Lien direct vers  une page donnée.</li>         <li><span class="keyword"> sublinks : </span> &#160;Liens vers les  sous pages de la page courante.</li>         <li><span class="keyword"> desclinks : </span> &#160;Historique de  navigation d''une page à une autre.</li>         <li><span class="keyword"> recursivelinks : </span>  &#160;Arborescence de sous liens depuis une page donnée.</li>     </ul></li>     <li><span class="vertclair"> linxDefinition : </span> &#160;<a target="_blank" href="http://doc.automne-cms.org/">Voir la documentation Automne pour le détail</a>.</li> </ul></div> <h3>Valeur d''une constante (voir les fichiers de constantes d''Automne) :</h3> <div class="retrait"><span class="code">&lt;atm-constant name="<span class="keyword">constantName</span>" /&gt;</span> <ul>     <li><span class="keyword">constantName :</span>&#160;Nom de la constante à  afficher. Toutes les constantes et notamment celles&#160; des fichiers  /cms_rc.php et /config.php sont concernées</li> </ul></div> <h3>Lien vers la page d''impression :</h3> <div class="retrait"><span class="code">&lt;atm-print-link keeprequest="<span class="keyword">true</span>"&gt;<span class="vertclair">{{href}}</span>&lt;/atm-print-link&gt;</span> <ul>     <li><span class="vertclair"> {{href}} : </span> &#160;Remplacé par le  lien vers la page imprimable.</li>     <li>Attribut <span class="keyword">keeprequest : </span> &#160;Optionnel,  permet de conserver les attributs GET avec lesquels la page à imprimer  est appelée (defaut : false)</li> </ul></div> <h3>Date de dernière mise à jour :</h3> <div class="retrait"><span class="code">&lt;atm-last-update format="<span class="keyword">d-m-Y</span>"&gt;<span class="vertclair">{{date}}  {{firstname}} {{lastname}}</span>&lt;/atm-last-update&gt;</span> <ul>     <li><span class="vertclair"> {{date}} : </span> &#160;Date de la dernière  mise à jour du contenu de la page. Le format de la date à afficher est  donné par l''attribut <span class="keyword">format</span> du tag.</li>     <li><span class="vertclair"> {{firstname}} : </span> &#160;Prénom de la  personne responsable de la dernière mise à jour.</li>     <li><span class="vertclair"> {{lastname}} : </span> &#160;Nom de la  personne responsable de la dernière mise à jour.</li> </ul></div> <h3>Fichiers Javascripts de la page :</h3> <div class="retrait"><span class="code">&lt;atm-js-tags files="<span class="keyword">/js/js1.js,/js/js2.js</span>" /&gt;</span> <p>Ce tag permet de concaténer plusieurs fichiers javascripts en un  seul. Accélérant ainsi le chargement de vos pages Web. Les fichiers  ainsi listés seront concaténés et compressés avant d''être servis à  l''internaute. Une gestion avancée du cache sur le navigateur de  l''internaute est employée.</p> <ul>     <li>Attribut <span class="keyword">files</span> : Fichiers  javascript à inclure dans la page (séparés par des virgules). Ces  fichiers doivent impérativement se trouver dans le répertoire /js/ ou un  sous répertoire.</li> </ul></div> <h3>Feuilles de styles CSS de la page :</h3> <div class="retrait"><span class="code">&lt;atm-css-tags files="<span class="keyword">/css/css1.css,/css/css2.css</span>" /&gt;</span> <p>Ce tag permet de concaténer plusieurs fichiers de feuille de styles  en un seul. Accélérant ainsi le chargement de vos pages Web. Les  fichiers ainsi listés seront concaténés et compressés avant d''être  servis à l''internaute. Une gestion avancée du cache sur le navigateur de  l''internaute est employée.</p> <ul>     <li>Attribut <span class="keyword">files</span> : Feuilles de styles  CSS à inclure dans la page (séparés par des virgules). Ces fichiers  doivent impérativement se trouver dans le répertoire /css/ ou un sous  répertoire.</li>     <li>Attribut <span class="keyword">media </span>(optionnel) : permet  de spécifier le média de sortie employé parmi : <span class="vertclair">all</span>,  <span class="vertclair">aural</span>, <span class="vertclair">braille</span>,  <span class="vertclair">embossed</span>, <span class="vertclair">handheld</span>,  <span class="vertclair">print</span>, <span class="vertclair">projection</span>,  <span class="vertclair">screen</span>, <span class="vertclair">tty</span>,  <span class="vertclair">tv</span>. Par défaut, si cet attribut est  absent, le média <span class="vertclair">all </span>sera employé.</li> </ul></div> <h3>Identifiant de la page :</h3> <div class="retrait"><span class="code"><span class="keyword">{{pageID}}</span></span> <ul>     <li><span class="keyword"> {{pageID}} : </span> &#160;Remplacé par  l''identifiant de la page en cours.</li> </ul></div></div></div>');
 INSERT INTO `messages` (`id_mes`, `module_mes`, `language_mes`, `message_mes`) VALUES(1710, 'standard', 'fr', 'Tags de travail spécifiques aux pages');
+INSERT INTO `messages` (`id_mes`, `module_mes`, `language_mes`, `message_mes`) VALUES(1711, 'standard', 'fr', 'Confirmez vous la suppression du module \'%s\' ? Attention, cette suppression est irréversible. Cette action supprimera le module ainsi que les catégories, les rangées et les fichiers attachés.');
