@@ -34,6 +34,7 @@ V4.1.0 (in progress)
 [FEATURE] : Add an option to search rows by module
 [FEATURE] : Add multiple atm-search-order support for polymod search inside atm-search tags
 [FEATURE] : Add an option to detach as popup some modal window of Automne administration
+[FEATURE] : Add polymod module deletion
 
 V4.0.2 (25/05/2010)
 [BUG] : Corrected bugs : 269, 270, 486, 497 (see http://www.automne-cms.org/bug/)
